[package]
name = "bevy_hex"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.7.0"}
rand = "0.8.0"
# bevy-inspector-egui = "0.11.0"
# bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls"}
ggrs = "0.9.1"
bevy_ggrs = "0.9.0"
console_error_panic_hook = "0.1"
matchbox_socket = { version = "0.3", features = ["ggrs-socket"] }

[workspace]
resolver = "2"

# TODO: remove once new versions are released
[patch.crates-io]
matchbox_socket = { git = "https://github.com/johanhelsing/matchbox", branch = "main" }