[package]
name = "bevy_hex"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.7"}
rand = "0.8.0"
# bevy-inspector-egui = "0.11.0"
# bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls"}
ggrs = "0.9"
bevy_ggrs = { version = "0.9", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1"
matchbox_socket = { version = "0.3", features = ["ggrs-socket"] }

[workspace]
resolver = "2"

# TODO: remove once new versions are released
[patch.crates-io]
ggrs = { git = "https://github.com/gschup/ggrs" }
bevy_ggrs = { git = "https://github.com/gschup/bevy_ggrs" }
matchbox_socket = { git = "https://github.com/johanhelsing/matchbox", branch = "main" }