[package]
name = "bevy_hex_snake"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8", features = ["dynamic"] }
rand = "0.8.0"
bevy-inspector-egui = "0.12.1"
bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls"}

[workspace]
resolver = "2"